[project]
name = "ChainAgents"
version = "1.1.0"
description = "Chainlit UI for a LangChain Deep Agent backed by Ollama or OpenAI-compatible servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "chainlit>=2.8.0",
    "deepagents>=0.5.0",
    "langchain-chroma>=0.2.0",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.0.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.0",
    "langgraph-checkpoint-postgres>=1.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
